--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,80 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+:root {
+  --primary: #e99401;
+  --black: #262626;
+  --white: #FFF;
+  --fuente-principal: 'Outfit', sans-serif;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
+html {
+  font-size: 62.5%;
   box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body {
+  font-size: 2rem;
+  font-family: var(--fuente-principal);
+  line-height: 1.5;
+}
+img {
+  max-width: 100%;
+  height: auto;
+}
+[class*="contenedor"], 
+main {
+  width: min(95%, 120rem);
+  margin: 3rem auto;
+}
+[class*="heading"] {
+  font-size: 4rem;
+  text-align: center;
+  font-weight: 900;
+  color: var(--primary);
+  margin: 5rem 0;
+}
+
+.navegacion {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 5rem;
+  gap: 2rem;
+
+}
+@media (min-width: 768px) {
+  .navegacion {
+      flex-direction: row;
+      margin: 0;
+  }
+}
+.navegacion a {
+  text-decoration: none;
+  color: var(--white);
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1.6rem;
+  padding: .5rem;
+  transition-property: background-color;
+  transition-duration: 300ms;
+}
+
+.navegacion a:hover,
+.active {
+    cursor: pointer;
+    background-color: var(--primary);
+}
+
+.error,
+.error-enlace {
+  font-size: 2.4rem;
+  text-align: center;
+  margin-top: 5rem;
+}
+.error-enlace {
+  font-size: 2.8rem;
+  display: block;
+  text-decoration: none;
+  color: var(--primary);
 }
